Cleaned up code

--- a/PinballGame/HW1-Triangle/HW1-Triangle.vcxproj
+++ b/PinballGame/HW1-Triangle/HW1-Triangle.vcxproj
@@ -134,7 +134,7 @@
   <ItemGroup>
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Mesh.h" />
-    <ClInclude Include="Model.h" />
+    <ClInclude Include="Object.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="stb_image.h" />
   </ItemGroup>
