--- a/PinballGame/HW1-Triangle/HW1-Triangle.vcxproj.filters
+++ b/PinballGame/HW1-Triangle/HW1-Triangle.vcxproj.filters
@@ -41,7 +41,7 @@
     <ClInclude Include="Mesh.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Model.h">
+    <ClInclude Include="Object.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
